<resources>

    <string name="app_name">박종철 추모앱</string>

    <string name="movement_june_democracy_movement_beginning_message">" 1979년 10.26사건으로 대통령 박정희가 사망하고 새로 취임한 최규하 대통령은 국민들의 민주화 요구를 수용하겠다 발표한다. 그러나 머지않아 전두환 등 신군부(하나회)가 군사반란을 일으켜 실권을 장악하였다. 이로 인해 광주 시민들이 민주화 운동을 시작하였지만 무자비하게 유혈 진압하였고 결국 전두환은 통일주체국민회의에서 대통령으로 당선된다.\n\n 1987년 1월 13일 서울대학교 언어학과 3학년이던 박종철 열사는 자정 경 하숙집에서 치안본부 대공분실 수사관 6명에게 연행되었다. 이는 박종철 열사의 선배 박종운을 잡기 위해서였다. 당시 공안 당국은 박종철 열사에게 박종운의 소재를 물었지만 대답하지 않았고, 공안 당국은 박종철 열사를 잔혹한 고문을 행했고 결국 박종철 열사는 사망하였다. \n 그러나 당시 정부는 사건을 축소 은폐하기 위하여 유명한 ‘책상을 탁 하고 치니 억 하고 쓰려졌다.’ 라는 사망원인을 발표한다. 이는 전국적인 시위로 확산되는 계기가 되었다.\n 그러다가 1987년 4월 13일, 전두환은 개헌논의를 유보하겠다고 발표했고 현행 헌법에 따라 권력을 이양하겠다는 호헌 조치라 비판을 받았다. 곧바로 각계 인사들이 호헌 조치를 비판하는 시국 성명을 냈다.\n\n 이후 5월 23일 \"박종철 고문살인은폐조작규탄 범국민대회 준비 위원회\"가 결성되었고 6월 10일 규탄대회를 가지기로 결정했다.\n \n 1987년 6월 9일, 다음날 열릴 예정인'고문살인 은폐 규탄 및 호헌 철폐 국민대회'를 앞두고 연세대에서 열린 결의 대회 후의 시위 도중 이한열 열사가 전투 경찰이 쏜 최루탄에 맞아 한 달 동안 사경을 해매다 결국 숨지고 만다.\n 박종철 열사, 이한열 열사의 죽음으로 국민들의 분노를 이끌어 냈고 본격적인 6월 항쟁이 시작되었다.</string>
    <string name="movement_june_democracy_movement_progress_message_tenth">" 잠실체육관에서 열린 민주정의당 제4차 전당대회 및 대통령 후보 지명대회 개회에서 노태우가 13대 대통령 후보로 선출된다. 그러나 같은 날, 전국에서 반정부 시위가 일어난다. ‘민주헌법쟁취국민운동본부’는 민중 항쟁의 뜻으로 차를 세워 경적을 울릴 것, 흰 손수건을 흔들어 달라고 부탁했고 택시운전수들의 경적 소리와 시내버스에서 흰 손수건을 흔드는 시민이 줄을 이었다.\n 여자고등학고 학생들, 특히 명동성당 농성 당시 계성여고 학생들의 도움으로 농성이 진행될 수 있었다. 당시 봉사자가 필요하다는 명분으로 경찰의 감시를 피해 성당으로 들어 갈 수 있었다.</string>
    <string name="movement_june_democracy_movement_progress_message_eleventh">" 치안당국이 전날의 시위는 '폭력성을 드러낸 법질서 유린행위'였다고 지적하였고, '앞으로도 법질서 파괴 행위는 어떤 일이 있더라도 단호하게 대처하겠다'고 밝혔다.\n 또한 서울 외곽 지역에서도 산발적인 시위가 진행되었다.</string>
    <string name="movement_june_democracy_movement_progress_message_twelfth">" 명동성당의 시위가 계속되었고 서울 전역에서 산발적인 시위가 계속 되었다."</string>
    <string name="movement_june_democracy_movement_progress_message_thirteenth">" 정부와 여당은 시위에 대응하기 위해 논의했으며 사회혼란 행위에는 강력 대응하기로 했다.\n 명동성당은 별다른 충돌 없이 결혼식과 미사가 계속 되었지만 긴장은 유지되었다. 시위대 측과 경찰 측 모두 자제하는 모습이었다. 시위 측은 사건 관련 연행, 구속된 사람들이 모두 석방 될 때까지 농성을 계속 하겠다 밝혔다.</string>
    <string name="movement_june_democracy_movement_progress_message_fourteenth">" 시위가 계속 되었지만 큰 충돌은 없었다. 김병도 명동성당 주임신부는 성명을 낸 뒤, '민주화를 위한 학생들의 노력에 성원을 보내지만 교회가 사명을 다하기 위해서는 모든 부분에서 학생들과 뜻을 같이할 수 없는 한계가 있기 때문에 직장과 학교 그리고 가정으로 돌아가 달라'라고 권고했다. 농성자는 사제단의 뜻을 받아드려 해산했지만 산발적 시위는 계속 되었다.</string>
    <string name="movement_june_democracy_movement_progress_message_twenty_sixth">" 전국 37개의 도시에서 국민평화대행진 시위가 전개되었고 3,467명이 경찰에 연행되었다. 그러나 6만 명의 경찰 병력으로 시위를 진압하기에는 역부족이었다. 민주헌법쟁취 국민운동본부는 이날 6.10 대회 때에 3배가 넘는 100만명이 참여했다 추산했다. 특히 넥타이 부대들의 시위 참여로 학생 운동에서 시민 항쟁으로 발전했다고 평가 받는다. 경찰력은 한계를 보였고 시위를 진압할 물리력은 계엄군 밖에 없었지만, 모든 도시에서 동시 다발적으로 일어나고 병력을 모두 빼고 시위 진압에 투입 할 수는 없어 계엄군 투입은 불가능했다.</string>
    <string name="movement_june_democracy_movement_progress_message_twenty_ninth">" 민정당 후보 노태우는 전두환에게 직선제 개헌을 건의하여 승낙을 받았다. 이후 노태우는 야당과 재야 세력이 주장해 온 요구를 대폭 수용하기로 하고 8개의 시국 수습 방안 (6.29 선언)을 발표한다. 1987년 전두환은 이 선언을 전격 수용한다. 그 내용은 다음과 같다."</string>
    <string name="movement_june_democracy_movement_progress_sub_message">\n1. 여, 야 합의하에 조속히 대통령 직선제 개헌을 하고 새 헌법에 의한 대통령 선거를 통해서 1988년 2월 평화적인 정부이양을 실행하도록 한다.\n2. 직선제 개헌이라는 제도의 변경뿐만 아니라 이의 민주적 실천을 위하여 자유로운 출마와 공정한 경쟁이 보장되어 국민의 올바른 심판을 받을 수 있는 내용으로 대통령 선거법을 개정하여야 한다.\n3. 정치권은 물론 모든 분야에 있어서의 반목과 대결이 과감히 제거가 되어 국민적 화해와 대단결을 도모하여야 한다.\n4. 인간의 존엄성은 더욱 존중되어야 하며, 국민 개개인의 기본적 인권은 최대한 신장되어야 한다.\n5. 언론자유의 창달을 위해서 관련제도와 관행을 획기적으로 개선해야 한다.\n6. 사회 각 부분의 자치와 자율은 최대한 보장되어야 한다.\n7. 정당의 건전한 활동이 보장되는 가운데 대화와 타협의 정치풍토가 조속히 마련되어야 한다.\n8. 밝고 맑은 사회건설을 위하여 과감한 사회 정화 조치를 강구해야 한다.</string>
    <string name="movement_june_democracy_movement_result_message">" 노태우 민주정의당 대표의 6.29 선언 이후 국민투표를 거처 1987년 10월 대통령 직선제 개헌이 이루어 졌다. 당시 통일민주당 고문 김대중과 총재 김영삼이 통합을 하지 못하고 독자 출마를 하여 야권의 통합을 이루지 못해 민주정의당 노태우 후보가 당선되었다.\n\n 6월 민중 항쟁의 결과 길었던 대한민국의 군사 독재 정치가 막을 내리게 되었다. 군인 출신인 노태우가 대통령이 당선되어 완전히 군사문화가 사라졌다고는 말할 수 없겠지만 정치, 사회, 문화적으로 대한민국에 민주주의가 뿌리 내리는 계기가 되었다.\n 또한 6월 민중 항쟁에 다양한 계층의 사람이 참여했고 그 결과 민주적인 시민운동이 발전하는 계기가 되었다.</string>

    <string name="who_life_message_one">부산에서 박정기화 정차순의 2남1녀중 막내로 출생</string>
    <string name="who_life_message_two">부산 토성초등학교 졸업</string>
    <string name="who_life_message_three">부산 영남제일중학교 졸업</string>
    <string name="who_life_message_four">서울대학교 인문대학 언어학과 입학 ‘대학문화연구회’에 가입</string>
    <string name="who_life_message_five">언어학과 학생회 홍보부장</string>
    <string name="who_life_message_six">강제 철거를 반대하는 사당동 시위로 구류 5일</string>
    <string name="who_life_message_seven">가리봉동 시위로 구류 3일</string>
    <string name="who_life_message_eight">대림동 공단에서 공장 활동</string>
    <string name="who_life_message_nine">언어학과 학생회장</string>
    <string name="who_life_message_ten">청계피복노조합법성쟁취 투쟁(왕십리 노학연대투쟁)으로 구속</string>
    <string name="who_life_message_eleven">징역 10개월에 집행유예 2년을 선고받고 출소</string>
    <string name="who_life_message_twelve">수배중인 한 선배를 도와줌</string>
    <string name="who_life_message_thirteen">자정에서 다음날 새벽 사이 하숙집 근처 또는 하숙집에서 치안본부 남영동 대공분실로 강제 연행</string>
    <string name="who_life_message_fourteen">오전 11시 20분경 파쇼경찰의 물고문에 맞서 싸우다 사망</string>
    <string name="who_life_message_fifteen">화장하여 임진강에 뿌려짐</string>
    <string name="who_life_message_sixteen">초혼장 거행 (마석 모란공원 민주열사묘역에 안장)</string>
    <string name="who_life_message_seventeen">서울대 교정에 추모비 건립</string>
    <string name="who_life_message_eigthteen">서울대 제 55회 졸업식에서 명예졸업장 수여</string>
    <string name="who_life_message_nineteen">부산 혜광고에 추모비 건립</string>
    <string name="who_life_message_twenty">진실화해위원회에서 박종철군 고문치사사건 축소, 은폐 기도에 ‘관계기관대책회의’의 부당한 개입이 있었음을 인정하고 유족에게 국가와 검찰이 사과할 것을 권고하는 결정내림</string>

    <string name="memorial_human_right_center">" 1987년, 박종철 군이 고문으로 사망한 남영동 대공분실은 현재 경찰청 인권센터로 사용되고 있다. 그러나 고문자들을 두렵게 만들기 위해 만든 입구의 철문은 이 장소가 심상치 않은 곳이었음을 알려준다.</string>
    <string name="memorial_structure_for_torture">" 인권센터 건물 사이에는 쉴 수 있는 공간이 있다. 건물 사이에 드는 바람이 잘 통하게 설계가 되어 있으며 정말 의자에 앉아 있으면 바람이 시원하다. 그러나 이 장소의 설계 목적은 경찰관들이 사람들을 고문하다 지쳤을 때 쉬라고 만든 것이다.\n 건물의 5층은 창문이 유난히 작게 만들어 졌는데 바로 이곳이 고문을 하던 곳이다. 바깥에서 안을 보지 못하게 만들고 고문을 당하던 사람이 창문으로 뛰어 내려 자살하는 것을 막기 위해 창문을 작게 만들어 졌다.\n 또한 이곳은 고문을 당하는 사람들이 최대한 공포감을 느끼도록 만들어 졌다. 입구의 철문은 매우 큰 소리를 내며 열려 공포감을 조성한다. 고문 당하는 사람은 나선형 계단을 올라가는데 몇 층이나 올라오는 지 짐작 할 수 없게 해 자신이 어디로 가는지 모르게 하고 철제 계단이 울려 역시 공포감을 조성한다.</string>
    <string name="memorial_torture_scene">" 철제 계단을 따라 올라가면 고문이 일어나던 장소에 갈 수 있다. 철제문을 열고 들어가면 방 안에는 작은 침대, 책상, 욕조와 변기가 있다. 욕조에 물을 담아두고 머리를 눌러 물고문을 했다고 한다. 방은 교묘하게 CCTV가 설치되어 있어 내부 전체를 볼 수가 있고 철문에도 렌즈가 설치되어 있어 밖에서 안을 드려다 볼 수 있다.\n 5층에서 창문을 보면 바로 옆에 전철역이 있는데 비정상적인 일이 일어나던 곳과 일상적인 곳이 너무 가까이에 있어 아이러니함을 자아낸다.</string>
    <string name="memorial_footprint">" 4층으로 내려가면 박종철 기념 전시실이 있다. 그곳에는 6월 민중항쟁의 배경과 진행과정이 설명되어 있다. 또 박종철 군이 친구들에게 썼던 편지, 취미였던 기타와 생전 사용한 안경이 전시되어 있다. 박종철 군은 바로 위층인 5층 고문실에서 고문을 받다 목이 욕조에 눌려서 사망했다. 또한 경찰은 이 사실을 축소 은폐하려고 하였다. 국가 권력의 의해 희생되었던 청년 박종철 군을 생각하며 우리가 지금 누리고 있는 민주주의의 가치에 대해 다시 생각해 볼 수 있었다.</string>

</resources>
