<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="#d6475d">

    <!-- title -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#eaeaea"/>

        <io.codetail.widget.RevealFrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/movement_title_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#d6475d"/>

        </io.codetail.widget.RevealFrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="우리의 함성"
                android:textSize="30sp"
                android:textColor="#ffffff"
                android:textStyle="bold"/>

        </LinearLayout>

        <ImageButton
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/contents"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:onClick="showContents"/>

    </RelativeLayout>

    <!-- contents -->

    <LinearLayout
        android:id="@+id/movement_contents_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:alpha="0">

        <Button
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="6월 민주항쟁의 발단"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:onClick="moveToContentA"/>

        <Button
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="6월 민주항쟁의 진행"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:onClick="moveToContentB"/>

        <Button
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="6월 민주항쟁의 결과"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:onClick="moveToContentC"/>

    </LinearLayout>

    <!-- content -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eaeaea"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/shadow"/>

        <ScrollView
            android:id="@+id/movement_content_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movement_content_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6월 민주 항쟁의 발단"
                    android:textSize="25sp"
                    android:textColor="#505050"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movement_june_democracy_movement_beginning_message"
                    android:textSize="18sp"
                    android:textColor="#505050"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="5dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#40000000"
                    android:layout_marginTop="30dp"/>

                <TextView
                    android:id="@+id/movement_content_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6월 민주 항쟁의 진행"
                    android:textSize="25sp"
                    android:textColor="#505050"
                    android:layout_marginTop="30dp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6월 10일"
                    android:textSize="18sp"
                    android:textColor="#d6475d"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movement_june_democracy_movement_progress_message_tenth"
                    android:textSize="18sp"
                    android:textColor="#505050"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6월 11일"
                    android:textSize="18sp"
                    android:textColor="#d6475d"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movement_june_democracy_movement_progress_message_eleventh"
                    android:textSize="18sp"
                    android:textColor="#505050"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6월 12일"
                    android:textSize="18sp"
                    android:textColor="#d6475d"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movement_june_democracy_movement_progress_message_twelfth"
                    android:textSize="18sp"
                    android:textColor="#505050"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6월 13일"
                    android:textSize="18sp"
                    android:textColor="#d6475d"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movement_june_democracy_movement_progress_message_thirteenth"
                    android:textSize="18sp"
                    android:textColor="#505050"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6월 14일 ~ 15일"
                    android:textSize="18sp"
                    android:textColor="#d6475d"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movement_june_democracy_movement_progress_message_fourteenth"
                    android:textSize="18sp"
                    android:textColor="#505050"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6월 26일"
                    android:textSize="18sp"
                    android:textColor="#d6475d"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movement_june_democracy_movement_progress_message_twenty_sixth"
                    android:textSize="18sp"
                    android:textColor="#505050"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6월 29일"
                    android:textSize="18sp"
                    android:textColor="#d6475d"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movement_june_democracy_movement_progress_message_twenty_ninth"
                    android:textSize="18sp"
                    android:textColor="#505050"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movement_june_democracy_movement_progress_sub_message"
                    android:textSize="18sp"
                    android:textColor="#787878"
                    android:lineSpacingExtra="5dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#40000000"
                    android:layout_marginTop="30dp"/>

                <TextView
                    android:id="@+id/movement_content_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6월 민주 항쟁의 결과"
                    android:textSize="25sp"
                    android:textColor="#505050"
                    android:layout_marginTop="30dp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movement_june_democracy_movement_result_message"
                    android:textSize="18sp"
                    android:textColor="#505050"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="5dp"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
