<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="#804abe">

    <!-- title -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#eaeaea"/>

        <io.codetail.widget.RevealFrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/memorial_title_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#804abe"/>

        </io.codetail.widget.RevealFrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="그의 발자취"
                android:textSize="30sp"
                android:textColor="#ffffff"
                android:textStyle="bold"/>

        </LinearLayout>

        <ImageButton
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/contents"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:onClick="showContents"/>

    </RelativeLayout>

    <!-- contents -->

    <LinearLayout
        android:id="@+id/memorial_contents_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:alpha="0">

        <Button
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="대공분실이 인권센터로 바뀌다"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:onClick="moveToContentA"/>

        <Button
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="고문을 위해 설계된 구조"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:onClick="moveToContentB"/>

        <Button
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="고문의 현장"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:onClick="moveToContentC"/>

        <Button
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="그의 발자취"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:onClick="moveToContentD"/>

    </LinearLayout>

    <!-- content -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eaeaea"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/shadow" />

        <ScrollView
            android:id="@+id/memorial_content_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:id="@+id/memorial_content_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="대공분실이 인권센터로 바뀌다"
                    android:textColor="#505050"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/memorial_human_right_center"
                    android:textColor="#505050"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/memorial_image_viewer_center_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="30dp"
                    android:background="#40000000" />

                <TextView
                    android:id="@+id/memorial_content_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="고문을 위해 설계된 구조"
                    android:textColor="#505050"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/memorial_structure_for_torture"
                    android:textColor="#505050"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/memorial_image_viewer_center_structure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="30dp"
                    android:background="#40000000" />

                <TextView
                    android:id="@+id/memorial_content_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="고문의 현장"
                    android:textColor="#505050"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/memorial_torture_scene"
                    android:textColor="#505050"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/memorial_image_viewer_center_hall"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"/>

                    <ImageView
                        android:id="@+id/memorial_image_viewer_center_inside"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="30dp"
                    android:background="#40000000" />

                <TextView
                    android:id="@+id/memorial_content_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="그의 발자취"
                    android:textColor="#505050"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/memorial_footprint"
                    android:textColor="#505050"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/memorial_image_viewer_center_museum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>